Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriPriBooleanRetinteger.quorum
class Main
    action Main
        boolean one = true
        boolean two = true
        Yoda<boolean, boolean, integer> yoda
        integer ret = yoda:useForce(one, two)
        output "passed"
     end
end
