Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriBooleanRetintegerFail.quorum
class Main
    action Main
        boolean one = true
        boolean two = true
        Yoda<boolean, boolean, integer> yoda
        boolean wrongRet = yoda(one, two)
     end
end
